test_fixtures/class/local_inherit_self.lox
{
  class Foo < Foo {} // RuntimeError: at 'Foo': A class can't inherit from itself.
}
// ParserError: [c line 5] Error at end: Expect '}' after block.
